--- a/style.css
+++ b/style.css
@@ -828,34 +828,36 @@ body {
     grid-template-columns:
       minmax(4rem, 1fr) repeat(8, minmax(min-content, 16rem))
       minmax(4rem, 1fr);
-    grid-template-rows: repeat(4, min-content) 70vh repeat(5, min-content);
+    grid-template-rows: repeat(4, min-content) repeat(5, min-content);
   }
 
   .logo {
     grid-column: 2/ 10;
     grid-row: 1/2;
     margin: 0 auto;
-    width: 100%;
+    width: 90%;
   }
-
+  .search {
+    grid-row: 3 / 4;
+  }
   .search-form {
     margin-top: 2rem;
     grid-row: 3 / 4;
   }
   .social-icons {
     grid-column: 2 / 5;
-    grid-row: 2/3;
+    grid-row: 3/4;
   }
 
   .first-nav {
     grid-column: 2 / 10;
-    grid-row: 3/4;
-  }
-  .second-nav {
     grid-row: 4/5;
   }
-  .banner {
+  .second-nav {
     grid-row: 5/6;
+  }
+  .banner {
+    grid-row: 2/3;
   }
 
   .banner-heading {
@@ -894,7 +896,7 @@ body {
     grid-template-columns:
       minmax(2rem, 1fr) repeat(8, minmax(min-content, 16rem))
       minmax(2rem, 1fr);
-    grid-template-rows: repeat(4, min-content) 50vh repeat(5, min-content);
+    grid-template-rows: repeat(4, min-content) repeat(5, min-content);
   }
   .logo {
     grid-column: 2/10;
@@ -903,7 +905,7 @@ body {
   }
 
   .social-icons {
-    grid-column: 2 / 5;
+    grid-row: 3/4;
   }
 
   .dropdown {
