--- a/style.css
+++ b/style.css
@@ -972,12 +972,31 @@ body {
     grid-template-columns:
       minmax(1rem, 1fr) repeat(8, minmax(min-content, 16rem))
       minmax(1rem, 1fr);
-    grid-template-rows: repeat(4, min-content) 30vh repeat(5, min-content);
+    grid-template-rows: repeat(4, min-content) repeat(5, min-content);
+  }
+  .banner {
+    grid-row: 2/3;
   }
   .logo {
     grid-column: 2/ 10;
     margin: 0 auto;
     width: 100%;
+  }
+
+  .search {
+    grid-row: 3 / 4;
+  }
+  .search-form {
+    margin-top: 2rem;
+    grid-row: 3 / 4;
+  }
+
+  .first-nav {
+    grid-column: 2 / 10;
+    grid-row: 4/5;
+  }
+  .second-nav {
+    grid-row: 5/6;
   }
 
   .first-nav-list {
@@ -987,7 +1006,7 @@ body {
 
   .social-icons {
     grid-column: 2 / 5;
-    grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
+    grid-row: 3/4;
   }
 
   .dropdown {
